<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.add.AddTaskFragment">

    <data>

        <variable
            name="taskFragment"
            type="com.miguelsantos.todewit.ui.fragments.add.AddTaskFragment" />

        <variable
            name="taskViewModel"
            type="com.miguelsantos.todewit.ui.fragments.viewmodel.TaskViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/addTaskConstraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical_begin"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical_end"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_horizontal_form_top"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.15" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/task_input_layout_title"
                style="@style/Widget.ToDewIt.InputLayout"
                android:hint="@string/hint_title"
                app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
                app:layout_constraintStart_toStartOf="@id/guideline_vertical_begin"
                app:layout_constraintTop_toTopOf="@id/guideline_horizontal_form_top">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/task_edt_title"
                    style="@style/Widget.ToDewIt.InputText"
                    android:inputType="text"
                    android:maxLength="40"
                    android:text="@{taskViewModel.isLayoutEmpty() ? @string/empty_string : taskViewModel.task.title}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/task_input_layout_description"
                style="@style/Widget.ToDewIt.InputLayout"
                android:layout_marginTop="@dimen/big_margin"
                android:hint="@string/hint_description"
                app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
                app:layout_constraintStart_toStartOf="@id/guideline_vertical_begin"
                app:layout_constraintTop_toBottomOf="@id/task_input_layout_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/task_edt_description"
                    style="@style/Widget.ToDewIt.InputText"
                    android:gravity="start"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:text="@{taskViewModel.isLayoutEmpty() ? @string/empty_string : taskViewModel.task.description}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/task_input_layout_date"
                style="@style/Widget.ToDewIt.InputLayout"
                android:layout_marginTop="@dimen/big_margin"
                android:layout_marginEnd="@dimen/big_margin"
                android:hint="@string/hint_date"
                app:layout_constraintEnd_toStartOf="@id/task_input_layout_time"
                app:layout_constraintStart_toStartOf="@id/guideline_vertical_begin"
                app:layout_constraintTop_toBottomOf="@id/task_input_layout_description"
                app:startIconDrawable="@drawable/ic_baseline_calendar_today_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/task_edt_date"
                    style="@style/Widget.ToDewIt.InputText"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="none"
                    android:onClick="@{() -> taskFragment.datePickerListener()}"
                    android:text="@{taskViewModel.isLayoutEmpty() ? @string/empty_string : taskViewModel.task.date}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/task_input_layout_time"
                style="@style/Widget.ToDewIt.InputLayout"
                android:layout_marginTop="@dimen/big_margin"
                android:hint="@string/hint_time"
                app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
                app:layout_constraintStart_toEndOf="@id/task_input_layout_date"
                app:layout_constraintTop_toBottomOf="@id/task_input_layout_description"
                app:startIconDrawable="@drawable/ic_baseline_access_time_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/task_edt_time"
                    style="@style/Widget.ToDewIt.InputText"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="none"
                    android:onClick="@{() -> taskFragment.timePickerListener()}"
                    android:text="@{taskViewModel.isLayoutEmpty() ? @string/empty_string : taskViewModel.task.hour}" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/task_btn_create_task"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="@{() -> taskViewModel.isLayoutEmpty() ? taskFragment.addTask() : taskFragment.updateTask()}"
                android:text="@{taskViewModel.isLayoutEmpty() ? @string/label_create_task : @string/label_edit_task}"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/guideline_vertical_begin"
                app:layout_constraintTop_toBottomOf="@+id/task_input_layout_date" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/task_btn_cancel"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:onClick="@{() -> taskFragment.returnHomeScreen()}"
                android:text="@string/label_cancel"
                app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
                app:layout_constraintStart_toStartOf="@id/guideline_vertical_begin"
                app:layout_constraintTop_toBottomOf="@id/task_btn_create_task" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>


